Project/istio/route-request.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-route
spec:
  host: web
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
