Project/istio/traffic-shifting.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-traffic
spec:
  hosts:
    - web
  http:
  - route:
    - destination:
        host: web
        subset: v1
      weight: 90
    - destination:
        host: web
        subset: v2
      weight: 10
